--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <header>
     <div class="header-content">
         <!-- Add your profile picture here -->
-        <img src="Photo.jpg" alt="Your Profile Picture" class="profile-picture"><br><br><br><br><br><br>
+        <img src="./Photo.jpg" alt="Your Profile Picture" class="profile-picture"><br><br><br><br><br><br>
         <h1>Kishore Kumar</h1>
         <p>Web Developer</p>
     </div>
