--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
                 font-size: 1rem;
             }
         }
-        
     </style>
 </head>
 <body>
@@ -176,7 +175,7 @@
 <header>
     <div class="header-content">
         <!-- Add your profile picture here -->
-        <img src="./Photo.jpg" alt="Your Profile Picture"<br> class="profile-picture"><br><br><br><br><br><br>
+        <img src="photo.jpg" alt="Your Profile Picture" class="profile-picture"><br><br><br><br><br><br>
         <h1>Kishore Kumar</h1>
         <p>Web Developer</p>
     </div>
