--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <div class="section-content">
         <h2>Projects</h2>
         <ul>
-            <li><a href="#"> 1 - Html project  <br><br><li>2 - Css project </li></a></li>
+            <li><a href="#"> portfolio Website <br> A personal portfolio website built using HTML,CSS and JAVASCRIPT</li></a></li>
             <!-- Add more project links here -->
         </ul>
     </div>
