--- a/index.html
+++ b/index.html
@@ -236,6 +236,13 @@
     </div>
 </section>
 
+<section id="CERTIFICATE">
+    <div class="section-content">
+        <h2>CERTIFICATE</h2>
+        <a href="COURSE-COMPLETION-TNSDC-FEWD-Cloud.pdf"target="_blank" class="download-button">Download CV</a>
+    </div>
+</section>
+
 <footer>
     <p>&copy; 2024 Kishore Kumar S</p>
 </footer>
