--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <section id="about">
     <div class="section-content">
         <h2>About Me</h2>
-        <p>"I am a Kishore Kumar S student at Government Arts college,Nandhanm . I am a hardworking and motivated individual with a passion for learning. I am excited to apply my skills and knowledge in a professional setting and gain valuable experience."GitHub Page.</p>
+        <p>"I am a Kishore Kumar S student at Government Arts college,Nandhanm . I am a hardworking and motivated individual with a passion for learning. I am excited to apply my skills and knowledge in a professional setting and gain valuable experience."</p>
     </div>
 </section>
 
