--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <div class="section-content">
         <h2>Projects</h2>
         <ul>
-            <li> portfolio Website <br> A personal portfolio website built using HTML,CSS and JAVASCRIPT</li></li>
+            <li> portfolio Website <br><br>A personal portfolio website built using HTML,CSS and JAVASCRIPT</li></li>
             <!-- Add more project links here -->
         </ul>
     </div>
@@ -244,7 +244,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 Kishore Kumar S</p>
+    <p>&copy; 2025 Kishore Kumar S</p>
 </footer>
 
 <script>
