--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 <section id="projects">
     <div class="section-content">
-        <h2>Projects</h2>
+        <h2>Projects</h2><br>
         <ul>
             <li> portfolio Website <br><br>A personal portfolio website built using HTML,CSS and JAVASCRIPT</li></li>
             <!-- Add more project links here -->
